--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -15,7 +15,7 @@
 
   <% if @events.any? %>
     <div class="ff-table-container">
-      <table class="ff-table">
+      <table class="ff-table ff-table--dense">
         <thead>
           <tr>
             <th scope="col" class="text-center"><%= icon("calendar-event") %></th>
