--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -20,8 +20,7 @@
           <tr>
             <th scope="col" class="text-center"><%= icon("calendar-event") %></th>
             <th scope="col" class="text-center"><%= icon("exclamation-circle") %></th>
-            <th scope="col">Type</th>
-            <th scope="col">Message</th>
+            <th scope="col">Event</th>
             <th scope="col">User</th>
             <th scope="col">Subject</th>
           </tr>
@@ -50,16 +49,20 @@
                   <%= char %>
                 </span>
               </td>
-              <td>
-                <%= link_to admin_events_path(filter: { type: [event.type] }),
-                            class: "ff-link",
-                            title: "Filter by type: #{event.type}" do %>
-                  <code class="text-sm"><%= event.type %></code>
-                <% end %>
-              </td>
-              <td class="max-w-sm">
-                <div class="truncate">
-                  <%= event.message.present? ? event.message : content_tag(:em, "No message", class: "text-slate-500") %>
+              <td class="align-top">
+                <div class="flex flex-col gap-1">
+                  <div>
+                    <%= link_to admin_events_path(filter: { type: [event.type] }),
+                                class: "ff-link font-semibold",
+                                title: "Filter by type: #{event.type}" do %>
+                      <code class="text-sm"><%= event.type %></code>
+                    <% end %>
+                  </div>
+                  <div class="max-w-sm text-sm text-slate-600">
+                    <div class="truncate">
+                      <%= event.message.present? ? event.message : content_tag(:em, "No message", class: "text-slate-500") %>
+                    </div>
+                  </div>
                 </div>
               </td>
               <td>
